# FIOU

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clear.bat  main.cpp  test.bat  test.sh
FIOU_Library/: CMakeLists.txt
FIOU_Library/export_headers/: export.h
FIOU_Library/export_headers/fiou_library/: export.h
FIOU_Library/headers/: FIOUMemoryInterface.h  FileHandle.h  FileHandleTP.h  FileProcessingFunction.h  enums.h  utils.h
FIOU_Library/src/: FIleProcessingFunction.cpp  FileHandle.cpp  output.txt
export_headers/: export.h
export_headers/FIOU/: export.h
export_headers/fiou_library/: export.h
headers/: FileHandle.h  FiouMemoryImplementor.h  macros.h  utils.h
src/: FIleProcessingFunction.cpp  FileHandle.cpp  FiouMemoryImplementor.cpp  main.cpp
test/: hello.cpp  hello2.cpp  i2.txt  i3.txt
